--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </main>
     <footer>
         <p>
-            Site criado por <a class="externo" href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/user/cursosemvideo" target="_blank">CursoemVideo</a> e editado por <a href="".
+            Site criado por <a class="externo" href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/user/cursosemvideo" target="_blank">CursoemVideo</a> e Replicado por <a href="https://github.com/arth-inacio">Arth Inacio</a>
         </p>
     </footer>
 </body>
