--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </main>
     <footer>
         <p>
-            Site projetado por <a class="externo" href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> Replicado por <a href="https://github.com/arth-inacio">Arth Inacio</a>
+            Site projetado por <a class="externo" href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> Replicado por <a class="externo" href="https://github.com/arth-inacio" target="_blank">Arth Inacio</a>
         </p>
     </footer>
 </body>
